@@ -190,10 +190,10 @@
     <value>Unihockey</value>
   </data>
   <data name="FieldType_Hockey_NHL" xml:space="preserve">
-    <value>Eishockey - NHL</value>
+    <value>Eishockey (NHL)</value>
   </data>
   <data name="FieldType_Soccer" xml:space="preserve">
-    <value>Fussball</value>
+    <value>Fussball (FIFA)</value>
   </data>
   <data name="FieldType_Volleyball" xml:space="preserve">
     <value>Volleyball</value>
@@ -242,5 +242,14 @@
   </data>
   <data name="FieldObject_BaseCone_Name_Format" xml:space="preserve">
     <value>Kegel - {0}</value>
+  </data>
+  <data name="FieldObject_Referee_Futsal_1" xml:space="preserve">
+    <value>Schiedsrichter #1</value>
+  </data>
+  <data name="FieldObject_Referee_Futsal_2" xml:space="preserve">
+    <value>Schiedsrichter #2</value>
+  </data>
+  <data name="FieldType_Futsal" xml:space="preserve">
+    <value>Futsal (FIFA)</value>
   </data>
 </root>
